fix video z-index home

--- a/custom.less
+++ b/custom.less
@@ -628,13 +628,13 @@ body > form {
     z-index: 5;
 }
 .video-wrap {
-    height: 100%;
-    .slider-video & {
-        width: 100%;
-        position: absolute;
-        z-index: -1;
-        top: 0;
-        left: 0;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    .slider-video {
+        display: block;
+        width: 100% !important;
+        height: auto !important;
         
     }
 }
@@ -649,6 +649,7 @@ body > form {
     padding: 20px 0;
     position: absolute;
     bottom: 0;
+    z-index: 2;
     width: 100%;
     background: url('images/grid.png') repeat;
     background-color: fade(@theme-color,50%);
@@ -687,13 +688,25 @@ body > form {
 .goto-video {
     position: absolute;
     left: 50%;
-    top: 50%;
-    font-size: 30px;
-    margin-left: -15px;
-    margin-top: -15px;
+    top: 20%;
+    font-size: 18px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-left: -20px;
+    margin-top: -20px;
+    background: url('images/grid.png') repeat;
+    background-color: fade(@theme-color,50%);
     color: rgba(255,255,255,.75);
     opacity: 0;
-    text-shadow: 0 0 2px rgba(0,0,0,.5) !important;
+    z-index:1;
+    i {
+        position: relative;
+        left: 2px;
+    }
+//    text-shadow: 0 0 2px rgba(0,0,0,.5) !important;
 }
 
 .portfolio-image  .portfolio-overlay {
@@ -706,9 +719,11 @@ body > form {
     background-color: fade(@theme-color,50%);
 }
 .portfolio-overlay, .portfolio-desc, .goto-video {
-    -webkit-transition: opacity .4s ease-in-out;
-    -o-transition: opacity .4s ease-in-out;
-    transition: opacity .4s ease-in-out;
+    -webkit-transition: all .4s ease;
+    -moz-transition: all .4s ease;
+    -ms-transition: all .4s ease;
+    -o-transition: all .4s ease;
+    transition: all .4s ease;
 }
 
 .portfolio-image:hover {
@@ -717,6 +732,7 @@ body > form {
     }
     .goto-video {
         opacity: 1;
+        top: 50%;
     }
 }
 .portfolio-image {
